# pennylane-keras-layer

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  RandomTrainingTest.ipynb  Release.md  Testing.ipynb  pyproject.toml  requirements.txt  setup.py  test.keras
.github/workflows/: publish.yml  publish_old.yml  python-package.yml
docs/: README.md  api_reference.md  contributing.md  examples.md  faq.md  getting_started.md  index.md  tutorials.md  user_guide.md
examples/: KerasCircuitLayer_example.ipynb  TrainingDRModel.ipynb  demo_simple.ipynb  demo_simple.py  fourier_series_example.py  import_tests.py  tutorial_qnn_module_keras.py
pennylane_keras_layer/: __init__.py  layer.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_dr_layer.py  test_edge_cases.py  test_generic_layer.py  test_integration.py  test_layer.py  test_utils.py
